tests/script_errors/pp_unknown_function_in_function/error.txt
Error in tests/script_errors/pp_unknown_function_in_function/foo.tremor:2:3 
    1 | fn f() with
    2 |   g(1,2)
      |   ^^^^^^ Call to undefined function ::g
    3 | end;